# infusion

./: .env.example  .gitignore  .vercelignore  API_ENDPOINTS.md  CROSS_CHAIN_SWAPS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  NEAR_DEPLOYMENT_SUMMARY.md  NEAR_INTEGRATION.md  PRODUCTION_CONTRACTS.md  PRODUCTION_SETUP.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  components.json  docker-compose.yml  env.example  env.local  env.test  evm_l_1_swap_scaffold.txt  evmscaffold.txt  hardhat.config.ts  infusion.code-workspace  jest.config.js  near-fusion+integration.txt  next.config.js  order-manager.ts  otherl1guide.txt  package-lock.json  package.json  postcss.config.js  re.txt  tailwind.config.ts  test-cross-chain.js  tsconfig.json  uniteai-wallet.code-workspace  vercel.json  verclog.txt
app/: globals.css  layout.tsx  page.tsx
btc/: README.md  index.ts  package.json  tsconfig.json
docs/: 1inchprizes.txt  frend.txt  transcript.txt
near-contracts/: Cargo.toml  README.md  deploy-final.sh  deploy.sh  initialize-contracts.sh  integrate-with-frontend.js
near-contracts/fusion-escrow/: Cargo.toml
near-contracts/fusion-escrow/src/: lib.rs
near-contracts/fusion-pool/: Cargo.toml
near-contracts/fusion-pool/src/: lib.rs
near-contracts/fusion-solver/: Cargo.toml
near-contracts/fusion-solver/src/: lib.rs
reverse/: reverse-order-manager.ts
scripts/: create-near-account-manual.md  demo-qualification-requirements.ts  deploy-all-testnets.ts  deploy-contracts.ts  deploy-testnet.ts  deploy.ts  git-workflow.sh  setup-dev.sh  setup-near.sh  verify-all-contracts.ts  (+1 more)
(+97 files in other folders)
