[workspace]
members = [
    "fusion-escrow",
    "fusion-solver",
    "fusion-pool"
]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace.dependencies]
near-sdk = "5.15.1"
near-contract-standards = "5.15.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
schemars = "0.8"
hex = "0.4" 